fix masonry alignment

--- a/css/components/masonry.scss
+++ b/css/components/masonry.scss
@@ -1,5 +1,7 @@
 .masonry--container {
-  width: 100%;  
+  width: calc(100% - 40px);  
+  margin-left: 20px;
+  margin-right: 20px;
   font-weight: 300;
   
   .grid {
@@ -18,11 +20,16 @@
 
   .grid-sizer,
   .grid-item {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 10px;
     width: 33.333%;
     margin: 0;
 
     img {
       display: block;
+      margin: 0 auto;
+      margin-bottom: 20px;
       max-width: 100%;
     }
     
